Fix download incorrect when the Uri path contains Chinese character.
The uri didn't escape correct by URI when it contains Chinese character
in it's servlet path part, so Downloader sends requests wrongly.
Use URIBuilder to override the servlet path, which will escape the
servlet path automatically.